@@ -1,3 +1,8 @@
-pkglib_LTLIBRARIES = HwTauDecay.la
+pkglib_LTLIBRARIES =
+
+if WANT_NEWDECAYERS
+pkglib_LTLIBRARIES += HwTauDecay.la
+endif
+
 HwTauDecay_la_SOURCES = TauDecayer.cc  TauDecayer.fh  TauDecayer.h  TauDecayer.icc
 HwTauDecay_la_LDFLAGS = -module
