@@ -1,4 +1,9 @@
-pkglib_LTLIBRARIES = HwTMDecay.la
+pkglib_LTLIBRARIES =
+
+if WANT_NEWDECAYERS
+pkglib_LTLIBRARIES += HwTMDecay.la
+endif
+
 HwTMDecay_la_SOURCES = \
 TensorMeson2PScalarDecayer.cc TensorMeson2PScalarDecayer.h TensorMeson2PScalarDecayer.icc \
 TensorMesonVectorPScalarDecayer.cc TensorMesonVectorPScalarDecayer.h TensorMesonVectorPScalarDecayer.icc \
