@@ -6,5 +6,12 @@ SSSVertex.cc SSSVertex.h SSSVertex.icc \
 VSSVertex.cc VSSVertex.h VSSVertex.icc \
 VVSSVertex.cc VVSSVertex.h VVSSVertex.icc \
 VVSVertex.cc VVSVertex.h VVSVertex.icc VVSVertex.fh \
-SVVLoopVertex.cc SVVLoopVertex.h SVVLoopVertex.icc SVVLoopVertex.fh \
-GeneralSVVVertex.cc GeneralSVVVertex.h GeneralSVVVertex.icc GeneralSVVVertex.fh 
+GeneralSVVVertex.cc GeneralSVVVertex.h GeneralSVVVertex.icc GeneralSVVVertex.fh
+
+EXTRA_libHwSVertex_la_SOURCES = \
+SVVLoopVertex.cc SVVLoopVertex.h SVVLoopVertex.icc SVVLoopVertex.fh
+
+if WANT_LOOPTOOLS
+libHwSVertex_la_SOURCES += \
+SVVLoopVertex.cc SVVLoopVertex.h SVVLoopVertex.icc SVVLoopVertex.fh
+endif
