@@ -9,7 +9,16 @@ SMGGGGVertex.cc SMGGGGVertex.h SMGGGGVertex.icc \
 SMGGGVertex.cc SMGGGVertex.h SMGGGVertex.icc \
 SMWWHVertex.cc SMWWHVertex.h SMWWHVertex.icc \
 SMWWWVertex.cc SMWWWVertex.h SMWWWVertex.icc \
-SMWWWWVertex.cc SMWWWWVertex.h SMWWWWVertex.icc \
+SMWWWWVertex.cc SMWWWWVertex.h SMWWWWVertex.icc 
+
+EXTRA_HwSMVertex_la_SOURCES = \
 SMHGGVertex.cc SMHGGVertex.h SMHGGVertex.icc SMHGGVertex.fh \
 SMHPPVertex.cc SMHPPVertex.h SMHPPVertex.icc SMHPPVertex.fh
+
+if WANT_LOOPTOOLS
+HwSMVertex_la_SOURCES += \
+SMHGGVertex.cc SMHGGVertex.h SMHGGVertex.icc SMHGGVertex.fh \
+SMHPPVertex.cc SMHPPVertex.h SMHPPVertex.icc SMHPPVertex.fh
+endif
+
 HwSMVertex_la_LDFLAGS = -module
