@@ -7,15 +7,23 @@ libHerwig_la_SOURCES =
 libHerwig_la_LIBADD = \
 $(top_builddir)/Hadronization/libHwHadronization.la \
 $(top_builddir)/Models/StandardModel/libHwStandardModel.la \
-$(top_builddir)/Decay/FormFactors/libHwFormFactor.la \
-$(top_builddir)/Decay/WeakCurrents/libHwWeakCurrent.la \
-$(top_builddir)/Decay/Radiation/libHwDecRad.la \
 $(top_builddir)/Decay/libHwDecay.la \
 $(top_builddir)/Helicity/Correlations/libHwCorrelations.la \
 $(top_builddir)/Helicity/WaveFunction/libHwWaveFunction.la \
-$(top_builddir)/Looptools/libHwLooptools.la \
 $(top_builddir)/Utilities/libHwUtils.la \
 $(top_builddir)/Helicity/Vertex/libHwVertex.la 
+
+if WANT_LOOPTOOLS
+libHerwig_la_LIBADD += \
+$(top_builddir)/Looptools/libHwLooptools.la
+endif
+
+if WANT_NEWDECAYERS
+libHerwig_la_LIBADD += \
+$(top_builddir)/Decay/FormFactors/libHwFormFactor.la \
+$(top_builddir)/Decay/WeakCurrents/libHwWeakCurrent.la \
+$(top_builddir)/Decay/Radiation/libHwDecRad.la 
+endif
 
 all-local: done-all-links
 
